# grimlocker-private

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  README_ASCII.txt
core-rust/src/: coordinates.rs  crypto.rs  enclave.rs  lib.rs  main.rs  time_guard.rs  wipe.rs
docs/: MODERN_SECURITY_ARCHITECTURE.md  TODO.md  WORKSPACE_MANAGEMENT.md  api-reference.md  architecture.md  crypto-spec.md  deployment.md  development.md  security-model.md  threat-model.md
grimdb/: Dockerfile.enterprise  Makefile  README.md  build.sh  docker-compose.enterprise.yml  embed.go  go.mod  go.sum  grimlocker_core.dll.lib  libgrimlocker_core.rlib
grimdb/.github/workflows/: ci.yml  security.yml
grimdb/api/: ipc_handler.go  translator.go
grimdb/api/handlers/: entry_handler.go  folder_handler.go  policy.go
grimdb/api/ipc/: protocol.go
grimdb/api/websocket/: bridge.go
grimdb/cgo/: rustbridge.go  rustbridge_helpers.go
grimdb/cmd/client/: main.go  remote.go
grimdb/cmd/daemon/: listener_enterprise.go  listener_single.go  main.go
grimdb/cmd/healthcheck/: main.go
grimdb/config/: factory.go  tier_enterprise.go  tier_single.go
grimdb/config/enterprise/: auth.go  config.go  provider.go
grimdb/config/single/: auth.go  device.go  discovery.go  provider.go  sync.go  (+1 more)
grimdb/crypto/: coordinate.go  handler_registry.go  module.go  provider.go
grimdb/docs/: API_REFERENCE.md  ARCHITECTURE.md  DEBUGGING.md  ENTERPRISE_FEATURES.md  ENTERPRISE_LOCAL_SETUP.md  ERROR_CODES.md  GQL_CLIENT_GUIDE.md  GQL_PROTOCOL.md  IPC_MESSAGE_TYPES.md  SDK_GUIDE.md  api_flow.md
grimdb/embed/: config.go  embed.go
grimdb/engine/: port.go
grimdb/errors/: logging.go  types_test.go
grimdb/gql/: dispatcher.go  opcodes.go  validator.go
grimdb/kernel/: bus.go  event.go  handler_test.go  watchdog.go
grimdb/provider/: interfaces.go
grimdb/scripts/: gen-certs.sh  get-token.sh
grimdb/sdk/: SDK_GUIDE.md  audit.go  biometric_interface.go  dispatcher.go  event.go  file_vault.go  gql_client.go  gql_client_test.go  operations.go  plugin.go  registry.go  storage.go  sync.go  tools.go  workspace.go
grimdb/sdk/cpp/: CMakeLists.txt  README.md
grimdb/sdk/cpp/build-check/: CMakeCache.txt
grimdb/sdk/cpp/include/grimlocker/: client.hpp  error.hpp  grimlocker_c.h  types.hpp
grimdb/sdk/cpp/include/grimlocker/detail/: json.hpp
grimdb/sdk/cpp/tests/: test_client.cpp
grimdb/sdk/python/: README.md  pyproject.toml
grimdb/sdk/python/grimlocker/: __init__.py  async_client.py  client.py  entries.py  files.py
grimdb/sdk/python/grimlocker/_internal/: errors.py  frame.py
grimdb/sdk/python/tests/: test_client.py
grimdb/sdk/rust/: Cargo.toml  README.md
grimdb/sdk/rust/src/: audit.rs  client.rs  entries.rs  error.rs  files.rs  lib.rs  protocol.rs  sync.rs  workspaces.rs
grimdb/sdk/rust/src/examples/: basic.rs  file_vault.rs
grimdb/sdk/rust/tests/: integration_test.rs
grimdb/security/: integrity.go  lockdown.go  module.go  mvk_store.go  session.go
grimdb/storage/: block.go  compression.go  entry.go  entry_module.go  ingest.go  interface.go  vfs_adapter.go  workspace.go
grimdb/tests/: lockdown_test.go
grimdb/tools/: module.go  ssh_gen.go  ssh_gen_test.go
grimdb/ui-dist/: index.html
ui-layer/: COMPONENT_REFERENCE.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
ui-layer/public/: autofill.html
ui-layer/src/: App.jsx  main.jsx
ui-layer/src-tauri/: Cargo.toml  tauri.conf.json  vaultinit_cmd.go
ui-layer/src-tauri/capabilities/: default.json
ui-layer/src-tauri/src/: main.rs
(+346 files in other folders)
