[package]
name = "grimlocker-desktop"
version = "0.1.0"
description = "Grimlocker Zero-Trust Vault Desktop Application"
authors = ["Grimlocker"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-ico", "image-png"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
grimlocker-core = { path = "../../core-rust" }
ureq = "2"
