[package]
name = "grimlocker-desktop"
version = "0.1.0"
description = "Grimlocker Zero-Trust Vault Desktop Application"
authors = ["Grimlocker"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-ico", "image-png"] }
tauri-plugin-global-shortcut = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
grimlocker-core = { path = "../../core-rust" }
ureq = "2"
enigo = "0.1"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_UI_WindowsAndMessaging", "Win32_System_Threading", "Win32_Foundation"] }
