[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "grimlocker"
version = "1.0.0"
description = "Grimlocker vault client — high-level Python SDK for the GQL binary protocol"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "websockets>=12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5",
    "ruff>=0.5",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
